## podium_api.py

class PodiumAPI:
    """Handles interactions with the Podium API to fetch podcast scripts."""

    def __init__(self, api_key: str = "default_api_key"):
        """Initializes the PodiumAPI with an API key.
        
        Args:
            api_key: The API key used for authenticating requests to the Podium API.
        """
        self._api_key = api_key

    def fetch_script(self, podcast_id: str) -> str:
        """Fetches the script of a podcast using its ID.
        
        Args:
            podcast_id: The unique identifier of the podcast.
        
        Returns:
            A string containing the script of the podcast.
        
        Raises:
            ValueError: If the podcast_id is invalid or the script cannot be fetched.
        """
        print("hello")
        # Simulate fetching a script from the Podium API.
        # In a real implementation, this would involve making an HTTP request to the API.
        if not podcast_id:
            raise ValueError("Invalid podcast ID provided.")

        # For demonstration purposes, return a mock script.
        # Replace this with actual API call logic.
        return f"Script for podcast {podcast_id}: This is a sample podcast script."
